# virtuadoc

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.web  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: page.tsx
document_engine/: Dockerfile  README.md  main.py  model_types.py  pyproject.toml  requirements-ci.txt  requirements.txt
document_engine/analyzer/: element_detector.py  pipeline.py  scoring_engine.py  structure_detector.py  variant_matcher.py
document_engine/api/: analyze_endpoint.py  config_endpoint.py  schemas.py  training_endpoint.py
document_engine/config/: config_store.py  item_loader.py
document_engine/config/global/: rules.yml
document_engine/config/items/: Assurance vie luxembourg Vitis.yml  Kbis natif.yml  contrat_assurance_vie.yml  kbis.yml
document_engine/config/templates/: contract.yml
document_engine/core/: excel_extractor.py  layout_parser.py  ocr_engine.py  pdf_loader.py  text_extractor.py
document_engine/tests/: test_element_value_extraction.py  test_element_value_extraction_kbis.py  test_excel_extractor.py  test_item_builder_excel.py  test_pipeline_item_detection.py  test_pipeline_ocr_fallback.py  test_scoring_and_matching.py  test_text_extractor.py
document_engine/training/: item_builder.py
document_engine/workers/: job_worker.py
scripts/prod/: common.sh  compile.sh  deploy.sh  push_main_bypass.sh  release.sh
(+1 files in other folders)
